Sun Nov 29 22:09:38 CET 2009 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos3d/Remesh.java
	  src/org/jcae/mesh/amibe/projection/MeshLiaison.java: Move Vertex
	locator from Remesh into MeshLiaison.  In MeshLiaison, drop quadrics
	for now, vertices are projected onto background mesh.  Quadrics did
	not work well with sharp edges.

Thu Nov 26 11:12:41 CET 2009 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/VirtualHalfEdge.java
	  src/org/jcae/mesh/amibe/ds/HalfEdge.java (split): Add a reference
	on the new vertex if edge is tagged as a boundary or a sharp edge.
	* src/org/jcae/mesh/amibe/ds/VirtualHalfEdge.java
	  src/org/jcae/mesh/amibe/ds/HalfEdge.java (checkSwap3D): Edges
	with two endpoints on inner boundaries are ranked lower.

Wed Nov 25 22:34:35 CET 2009 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos3d/Remesh.java (findSurroundingTriangle):
	If a triangle cannot be found at a distance lower than a threshold,
	look for all triangles.

Sun Nov 22 22:47:08 CET 2009 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Mesh.java (buildRidges): Junctions
	were not detected.

Mon Nov 16 18:45:43 CET 2009 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos2d/Insertion.java
	  src/org/jcae/mesh/amibe/algos3d/Remesh.java: Nodes cannot be
	inserted if they would be too near of an existing point.  But
	some long edges can then not be split.  When this happens,
	lower minlen to try harder to split long edges.
	* src/org/jcae/mesh/amibe/algos2d/Insertion.java
	  src/org/jcae/mesh/amibe/algos3d/Remesh.java: Compute
	position of split points by dichotomy.  Edge was previously
	discretized by a fixed number of segments, and each point was
	tested to find a point at a distance 1 of start point.
	This was inaccurate, candidate point may be at a distance >> 1
	from start point, it could then be too near from end point, and